--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <!-- permission required to Send SMS -->
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+<!-- hhhhh -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
